# tetris

./: .clang-tidy  CMakeLists.txt  README.md  bwindow.c  bwindow.h  constants.c  constants.h  controls.h  figure.c  figure.h  gameplay.c  gameplay.h  graphics.c  graphics.h  main.c  settings.c  settings.h  ui.c  ui.h
